made a pca model and tested the reduced dataset with all the other models

--- a/machine learning/models/Support Vector Machine/svm with pca.ipynb
+++ b/machine learning/models/Support Vector Machine/svm with pca.ipynb
@@ -6,20 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import pandas as pd \n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv('../data processing/preprocessed.csv')\n",
-    "pd.set_option(\"display.max_columns\", None)"
+    "import matplotlib.pyplot as plt \n",
+    "import seaborn as sns \n",
+    "import numpy as np"
    ]
   },
   {
@@ -28,8 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = df[['Humidity3pm', 'Sunshine', 'Humidity9am', 'Rainfall', 'Cloud9am', 'Cloud3pm', 'RainToday']]\n",
-    "y = df[\"RainTomorrow\"]"
+    "df = pd.read_csv('../../data processing/reduced_dataset.csv')\n"
    ]
   },
   {
@@ -38,17 +27,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X,y, test_size =0.2, random_state = 0)\n"
+    "X = df.drop('RainTomorrow', axis=1)\n",
+    "y = df['RainTomorrow']"
    ]
   },
   {
@@ -57,32 +37,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaler = StandardScaler()\n",
-    "scaler_X_train = scaler.fit_transform(X_train)\n",
-    "scaler_X_test = scaler.fit_transform(X_test)"
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=101)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.linear_model import LogisticRegression"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "log_model = LogisticRegression()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -492,63 +453,26 @@
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-3);\n",
        "}\n",
-       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;LogisticRegression<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.4/modules/generated/sklearn.linear_model.LogisticRegression.html\">?<span>Documentation for LogisticRegression</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>LogisticRegression()</pre></div> </div></div></div></div>"
+       "</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>SVC()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;SVC<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.4/modules/generated/sklearn.svm.SVC.html\">?<span>Documentation for SVC</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>SVC()</pre></div> </div></div></div></div>"
       ],
       "text/plain": [
-       "LogisticRegression()"
+       "SVC()"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "log_model.fit(scaler_X_train, y_train)\n"
+    "from sklearn.svm import SVC\n",
+    "svc = SVC()\n",
+    "svc.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1.11641193, -0.19413025, -0.19666186,  0.36421992,  0.10591048,\n",
-       "         0.23742351,  0.01806566]])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "log_model.coef_\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred = log_model.predict(scaler_X_test)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -557,18 +481,26 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "       False       0.85      0.95      0.90     22726\n",
-      "        True       0.70      0.41      0.51      6366\n",
+      "       False       0.85      0.96      0.90     34058\n",
+      "        True       0.74      0.41      0.53      9580\n",
       "\n",
-      "    accuracy                           0.83     29092\n",
-      "   macro avg       0.77      0.68      0.71     29092\n",
-      "weighted avg       0.82      0.83      0.81     29092\n",
-      "\n"
+      "    accuracy                           0.84     43638\n",
+      "   macro avg       0.80      0.68      0.71     43638\n",
+      "weighted avg       0.83      0.84      0.82     43638\n",
+      "\n",
+      "[[32705  1353]\n",
+      " [ 5680  3900]]\n"
      ]
     }
    ],
    "source": [
-    "print(classification_report(y_test, y_pred))\n"
+    "from sklearn.metrics import accuracy_score, confusion_matrix\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "y_pred5 = svc.predict(X_test)\n",
+    "\n",
+    "print(classification_report(y_test,y_pred5))\n",
+    "print(confusion_matrix(y_test,y_pred5))"
    ]
   },
   {
