added clusters to the pca dataset and tested model accuracy

--- a/machine learning/models/Random Forest/random_forest.ipynb
+++ b/machine learning/models/Random Forest/random_forest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "[145460 rows x 23 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -490,14 +490,14 @@
       "ValueError: Out of bag estimation only available if bootstrap=True\n",
       "\n",
       "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
-      "c:\\python 3.9\\lib\\site-packages\\sklearn\\model_selection\\_search.py:1051: UserWarning: One or more of the test scores are non-finite: [0.85055287 0.85071985 0.85143677 0.85101447 0.85175105 0.85180014\n",
-      " 0.85233049 0.85252692 0.85175107 0.8519573  0.85200641 0.85217337\n",
-      " 0.85330278 0.85292959 0.85352867 0.85283138 0.85157426 0.85158409\n",
-      " 0.85276263 0.8528903  0.8530769  0.85313584 0.85386259 0.8534894\n",
-      "        nan 0.85181981        nan 0.85287065        nan 0.85339117\n",
-      "        nan 0.85432417        nan 0.85292958        nan 0.85348938\n",
-      "        nan 0.85437328        nan 0.85481522        nan 0.85309653\n",
-      "        nan 0.85418667        nan 0.85464826        nan 0.85541432]\n",
+      "c:\\python 3.9\\lib\\site-packages\\sklearn\\model_selection\\_search.py:1051: UserWarning: One or more of the test scores are non-finite: [0.84959042 0.85037612 0.85142695 0.85122071 0.85126982 0.85170195\n",
+      " 0.85206531 0.85234033 0.85195728 0.85126982 0.85216354 0.85236978\n",
+      " 0.853126   0.85288047 0.85344028 0.85305726 0.85202602 0.85171178\n",
+      " 0.85296887 0.85254655 0.85235013 0.85301796 0.85323403 0.85324386\n",
+      "        nan 0.85238941        nan 0.85335189        nan 0.85369562\n",
+      "        nan 0.85359741        nan 0.85361705        nan 0.85335189\n",
+      "        nan 0.85486433        nan 0.85436346        nan 0.85340101\n",
+      "        nan 0.85452058        nan 0.85506075        nan 0.85497235]\n",
       "  warnings.warn(\n"
      ]
     },
@@ -923,13 +923,36 @@
        "                         'oob_score': [True, False]})"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "grid.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'bootstrap': False,\n",
+       " 'max_features': 4,\n",
+       " 'n_estimators': 128,\n",
+       " 'oob_score': False}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid.best_params_"
    ]
   },
   {
@@ -941,18 +964,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[32485  1573]\n",
-      " [ 4804  4776]]\n",
+      "[[32504  1554]\n",
+      " [ 4773  4807]]\n",
       "\n",
       "\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "       False       0.87      0.95      0.91     34058\n",
-      "        True       0.75      0.50      0.60      9580\n",
+      "        True       0.76      0.50      0.60      9580\n",
       "\n",
-      "    accuracy                           0.85     43638\n",
+      "    accuracy                           0.86     43638\n",
       "   macro avg       0.81      0.73      0.76     43638\n",
-      "weighted avg       0.85      0.85      0.84     43638\n",
+      "weighted avg       0.85      0.86      0.84     43638\n",
       "\n"
      ]
     }
