--- a/machine learning/models/logistic regression/logistic regression with PCA.ipynb
+++ b/machine learning/models/logistic regression/logistic regression with PCA.ipynb
@@ -60,8 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler"
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
