added naive bayes classifier and tested all the models on selection features

--- a/machine learning/models/Decision Tree/Decision-Tree.ipynb
+++ b/machine learning/models/Decision Tree/Decision-Tree.ipynb
@@ -731,9 +731,7 @@
     "    importance = pd.DataFrame(index=X.columns, data=model.feature_importances_, columns=['Feature Importance']).sort_values(by='Feature Importance', ascending=False)\n",
     "    print(importance)\n",
     "    print('\\n')\n",
-    "    sns.barplot(x = 'Feature Importance', y = importance.index, data=importance)\n",
-    "    # plt.figure(figsize=(12,8), dpi=200)\n",
-    "    # plot_tree(model, feature_names=X.columns, filled=True)"
+    "    sns.barplot(x = 'Feature Importance', y = importance.index, data=importance)"
    ]
   },
   {
