tested 2 models on other dataset as well

--- a/machine learning/models/XGBoost/XGBoost feature selection.ipynb
+++ b/machine learning/models/XGBoost/XGBoost feature selection.ipynb
@@ -426,11 +426,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = df.drop([\"RainTomorrow\"], axis=1)\n",
+    "X = df[['Sunshine', 'Humidity9am', 'Cloud9am', 'Cloud3pm','RainToday', 'Humidity3pm', 'Rainfall']]\n",
     "Y = df[\"RainTomorrow\"]\n",
     "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X,Y, test_size =0.2, stratify = Y, random_state = 0)\n"
@@ -438,16 +438,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "22"
+       "7"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
        "              num_parallel_tree=None, random_state=None, ...)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -546,12 +546,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "       False    0.94670   0.92580   0.93614     22063\n",
-      "        True    0.89227   0.92182   0.90680     14709\n",
+      "       False    0.83969   0.84445   0.84206     22063\n",
+      "        True    0.76467   0.75818   0.76141     14709\n",
       "\n",
-      "    accuracy                        0.92421     36772\n",
-      "   macro avg    0.91949   0.92381   0.92147     36772\n",
-      "weighted avg    0.92493   0.92421   0.92440     36772\n",
+      "    accuracy                        0.80994     36772\n",
+      "   macro avg    0.80218   0.80131   0.80174     36772\n",
+      "weighted avg    0.80968   0.80994   0.80980     36772\n",
       "\n"
      ]
     }
@@ -560,40 +560,6 @@
     "from sklearn.metrics import classification_report\n",
     "y_pred = model_xgb.predict(X_test)\n",
     "print(classification_report(y_test,y_pred,digits=5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['xgb.pkl']"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import joblib\n",
-    "joblib.dump(model_xgb, 'xgb.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pickle\n",
-    "\n",
-    "# Assuming `scaler` is your StandardScaler instance\n",
-    "with open('scaler.pkl', 'wb') as f:\n",
-    "    pickle.dump(scaler, f)"
    ]
   }
  ],
